--- a/src/front/styles/home.css
+++ b/src/front/styles/home.css
@@ -5,54 +5,58 @@
     one more css for each page that will contain the selected used 
     on that page only (the ones not reused in other pages).
 */
-*{
-    margin:0;
-    padding:0;
-    text-decoration: none;
+* {
+  margin: 0;
+  padding: 0;
+  text-decoration: none;
 }
-.container{
-    display:flex;
+.container {
+  display: flex;
 }
-main{
-    width: 100%;
-    padding: 20px;
+main {
+  width: 100%;
+  padding: 20px;
 }
-.sidebar{
-    background: rgb(255, 255, 255);
-    color: rgb(0, 0, 0);
-    height: 100vh;
-    width: 200px;
-    transition: all 0.5s;
+.sidebar {
+  background: rgb(255, 255, 255);
+  color: rgb(0, 0, 0);
+  height: 100vh;
+  width: 200px;
+  transition: all 0.5s;
 }
-.top_section{
-    display: flex;
-    align-items:center;
-    padding:20px 15px;
+.top_section {
+  display: flex;
+  flex-direction: column;
+
+  align-items: left;
+  padding: 20px 15px;
 }
-.logo{
-    font-size: 30px;
+.logo {
+  font-size: 30px;
 }
-.bars{
-    display: flex;
-    font-size: 25px;
-    margin-left: 50px;
+.bars {
+  display: flex;
+  font-size: 25px;
+  margin-left: 50px;
 }
-.link{
-    display: flex;
-    color: rgb(0, 0, 0);
-    padding: 10px 15px;
-    gap: 15px;
-    transition: all 0.5s;
+.link {
+  display: flex;
+  color: rgb(0, 0, 0);
+  padding: 10px 15px;
+  align-items: center;
+  gap: 15px;
+  transition: all 0.5s;
 }
-.link:hover{
-    background:lightskyblue;
-    color: #000;
-    transition: all 0.5s;
+.link:hover {
+  background: lightskyblue;
+  color: #000;
+  transition: all 0.5s;
 }
-.active{
-    background: lightskyblue;
-    color: #000;
+.active {
+  background: lightskyblue;
+  color: #000;
 }
-.icon, .link_text{
-    font-size: 20px;
+.icon,
+.link_text {
+  font-size: 20px;
 }
