--- a/src/front/styles/login.css
+++ b/src/front/styles/login.css
@@ -1,6 +1,6 @@
 
   body {
-    background: -webkit-linear-gradient(bottom, #ffc800, #F9B551);
+    background: -webkit-linear-gradient(bottom, #f7a324,#f9dd78);
     background-repeat: no-repeat;
   }
   label {
