Flux and Store functions created, starting the account styling and store testing

--- a/src/front/styles/login.css
+++ b/src/front/styles/login.css
@@ -1,7 +1,7 @@
 
   body {
-    background: -webkit-linear-gradient(bottom, #f7a324,#f9dd78);
-    background-repeat: no-repeat;
+    background: -webkit-linear-gradient(bottom, #f9b551,#FEF8BE );
+   
   }
   label {
     font-family: "Raleway", sans-serif;
