--- a/src/front/styles/searchbar.css
+++ b/src/front/styles/searchbar.css
@@ -3,7 +3,8 @@
   display: flex;
   background-color: white;
   height: 30px;
-  width: 600px;
+  width: 100%;
+  max-width: 400px;
 }
 
   .searchInput {
@@ -37,8 +38,8 @@
   
   .dataResult {
     margin-top: 5px;
-    width: 300px;
-    height: 200px;
+    width: 100%;
+    height: 100%;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
     overflow: hidden;
     overflow-y: auto;
